--- a/hal11/public/manifest.json
+++ b/hal11/public/manifest.json
@@ -1,31 +1,31 @@
 {
-    "theme_color": "#6fa79f",
-    "background_color": "#6fa79f",
+    "theme_color": "FD0",
+    "background_color": "FD0",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "TIGA",
-    "short_name": "tiga",
+    "name": "Musicon forsamlingshus",
+    "short_name": "MF",
     "purpose": "any maskable",
-    "description": "Tværfaglig Innovation Group Aps",
+    "description": "Musicon forsamlingshus",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            "src": "./img/icons/logo-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-256x256.png",
+            "src": "./img/icons/logo-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-384x384.png",
+            "src": "./img/icons/logo-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "./img/icons/logo-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
